--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/alt.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="alt.css" />
     <title>Guido Health | A lifestyle that work</title>
   </head>
   <body>
@@ -32,7 +32,7 @@
       <div class="container px-0">
         <div class="row mx-0">
           <div class="col-6 pe-0">
-            <img src="/img/guido_logo.svg" id="navlogo" alt="" />
+            <img src="img/guido_logo.svg" id="navlogo" alt="" />
           </div>
           <div class="col-6 p-0">
             <div class="col-md-4"></div>
@@ -86,7 +86,7 @@
         <div class="col-md-6" id="landingLeft">
           <br id="mobnotbr" />
           <br id="mobnotbr" />
-          <img class="" style="width: 260px" src="/img/guido_logo.svg" alt="" />
+          <img class="" style="width: 260px" src="img/guido_logo.svg" alt="" />
           <p class="m-0 me-0" id="guidotext">
             Guido is a healthy lifestyle program that Just Fits with your
             current lifestyle. It is the small incremental changes that we
@@ -119,13 +119,13 @@
           <img
             id="pose"
             class="w-100 px-1 pe-0 boxRight"
-            src="/img/pose.png"
+            src="img/pose.png"
             alt=""
           />
           <img
             id="pose2"
             class="w-100 px-0 pe-0 box"
-            src="/img/pose2.png"
+            src="img/pose2.png"
             alt=""
           />
         </div>
@@ -136,10 +136,10 @@
           <div class="col-md-7 px-0" style="margin-top: -100px">
             <div class="row mx-0">
               <div class="col-md-6 px-3 my-2">
-                <img class="w-100 boxLeft mb-3" src="/img/step1.png" alt="" />
+                <img class="w-100 boxLeft mb-3" src="img/step1.png" alt="" />
               </div>
               <div class="col-md-6 px-3 my-2">
-                <img class="w-100 boxRight" src="/img/step2.png" alt="" />
+                <img class="w-100 boxRight" src="img/step2.png" alt="" />
               </div>
             </div>
           </div>
@@ -187,7 +187,7 @@
                 controls
                 class="col-md-6 mx-auto"
                 style="border-radius: 32px"
-                src="/img/guido.mp4"
+                src="img/guido.mp4"
               ></video>
             </div>
           </div>
@@ -223,20 +223,20 @@
         <div class="col-md-6 box">
           <div class="row">
             <div class="col-6 text-center">
-              <img class="w-75" src="/img/cuh.png" alt="" />
+              <img class="w-75" src="img/cuh.png" alt="" />
             </div>
             <div class="col-6 text-center">
-              <img class="w-75" src="/img/mcca.png" alt="" />
+              <img class="w-75" src="img/mcca.png" alt="" />
             </div>
           </div>
         </div>
         <div class="col-md-6 box">
           <div class="row">
             <div class="col-6 text-center">
-              <img class="w-75" src="/img/ignou.png" alt="" />
+              <img class="w-75" src="img/ignou.png" alt="" />
             </div>
             <div class="col-6 text-center">
-              <img class="w-75" src="/img/sfh.png" alt="" />
+              <img class="w-75" src="img/sfh.png" alt="" />
             </div>
           </div>
         </div>
@@ -248,7 +248,7 @@
     <br />
     <div
       style="
-        background: url(/img/mtn.svg);
+        background: url(img/mtn.svg);
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -272,14 +272,14 @@
 
               <!-- <lottie-player
                 class="mx-auto"
-                src="/img/user.json"
+                src="img/user.json"
                 background="transparent"
                 speed="0.5"
                 style="width: 120px; height: 120px"
                 loop
                 autoplay
               ></lottie-player> -->
-              <img id="paraIcon" src="/img/user.svg" alt="" />
+              <img id="paraIcon" src="img/user.svg" alt="" />
               <br />
               <br />
               <p id="paraValue">85%</p>
@@ -287,7 +287,7 @@
             </div>
             <div class="col-md-4 box">
               <br />
-              <img id="paraIcon" src="/img/msg.svg" alt="" />
+              <img id="paraIcon" src="img/msg.svg" alt="" />
               <br />
               <br />
               <p id="paraValue">17199</p>
@@ -295,7 +295,7 @@
             </div>
             <div class="col-md-4 box">
               <br />
-              <img id="paraIcon" src="/img/satisfaction.svg" alt="" />
+              <img id="paraIcon" src="img/satisfaction.svg" alt="" />
               <br />
               <br />
               <p id="paraValue">99%</p>
@@ -312,7 +312,7 @@
       <br id="mobnotbr" />
       <br />
       <h3 class="m-0" style="line-height: 42px; color: #324a5e">
-        Get Genuine Services <img class="ms-2" src="/img/apple.svg" alt="" />
+        Get Genuine Services <img class="ms-2" src="img/apple.svg" alt="" />
       </h3>
       <br id="mobnotbr" />
       <br />
@@ -336,7 +336,7 @@
                     box-shadow: 0px 0px 40px rgba(6, 44, 13, 0.7);
                   "
                 >
-                  <img src="/img/fame.png" id="serviceicon" alt="" />
+                  <img src="img/fame.png" id="serviceicon" alt="" />
                 </div>
                 <br />
                 <br />
@@ -382,7 +382,7 @@
                     box-shadow: 0px 0px 40px rgba(16, 26, 46, 0.75);
                   "
                 >
-                  <img src="/img/workplace.png" id="serviceicon" alt="" />
+                  <img src="img/workplace.png" id="serviceicon" alt="" />
                 </div>
                 <br />
                 <br />
@@ -425,7 +425,7 @@
                     box-shadow: 0px 0px 40px rgba(75, 55, 9, 0.75);
                   "
                 >
-                  <img src="/img/meal.svg" id="serviceicon" alt="" />
+                  <img src="img/meal.svg" id="serviceicon" alt="" />
                 </div>
                 <br />
                 <br />
@@ -468,7 +468,7 @@
                     box-shadow: 0px 0px 20px rgba(237, 21, 106, 0.25);
                   "
                 >
-                  <img src="/img/mental.png" id="serviceicon" alt="" />
+                  <img src="img/mental.png" id="serviceicon" alt="" />
                 </div>
                 <br />
                 <br />
@@ -501,7 +501,7 @@
       <br id="mobnotbr" />
       <br />
       <h3 style="line-height: 42px; color: #324a5e">
-        Testimonials <img class="ms-2" src="/img/trophy.svg" alt="" />
+        Testimonials <img class="ms-2" src="img/trophy.svg" alt="" />
       </h3>
       <br id="mobnotbr" />
       <br />
@@ -754,7 +754,7 @@
       <div class="container">
         <br />
         <br />
-        <img style="width: 260px" src="/img/guido_logo.svg" alt="" />
+        <img style="width: 260px" src="img/guido_logo.svg" alt="" />
         <br />
         <div class="row">
           <div class="col-md-6">
@@ -769,7 +769,7 @@
                 ><img
                   class="mx-2"
                   style="height: 32px"
-                  src="/img/whatsapp.svg"
+                  src="img/whatsapp.svg"
                   alt=""
               /></a>
             </h4>
@@ -848,7 +848,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
-  <script src="/alt.js"></script>
-  <script src="/altright.js"></script>
-  <script src="/altleft.js"></script>
+  <script src="alt.js"></script>
+  <script src="altright.js"></script>
+  <script src="altleft.js"></script>
 </html>
