--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="alt.css" />
     <title>Guido Health | A lifestyle that works</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8BWMC08B7W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8BWMC08B7W');
+</script>
   </head>
   <body>
     <div id="navpc" class="mx-0 fixed-top">
