--- a/index2.html
+++ b/index2.html
@@ -120,7 +120,7 @@
             <a
               id="joinuslanding"
               style="font-size: 24px"
-              class="btn px-5 rounded-pill py-2 box w-100"
+              class="btn px-5 rounded-pill py-2 w-100"
               href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
               >Join us today</a
             >
