--- a/index2.html
+++ b/index2.html
@@ -160,7 +160,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5 pe-0">
+          <div class="col-md-5 px-3">
             <div class="w-100 box">
               <br />
               <br />
@@ -192,18 +192,14 @@
           <div class="row box">
             <div
               class="col-md-10 bg-white py-2 row mx-auto"
-              style="
-                border-radius: 24px;
-                border-left: solid 16px #6c8dd0;
-                border-right: solid 16px #6c8dd0;
-              "
+              style="border-radius: 48px; border: solid 16px #6c8dd0"
             >
               <video
                 autoplay
                 loop
                 controls
                 class="col-md-6 mx-auto"
-                style="border-radius: 32px"
+                style="border-radius: 48px"
                 src="img/guido.mp4"
               ></video>
             </div>
@@ -211,14 +207,14 @@
           <br />
           <br id="mobnotbr" />
           <br id="mobnotbr" />
-          <div class="col-md-8 mx-auto text-center">
+          <div class="col-md-8 px-2 mx-auto text-center">
             <h3 class="text-white box">
               Highly rated psychologically driven program
             </h3>
-            <h5 class="box" style="color: #b4fff6a1">
+            <p class="box" style="color: #b4fff6a1; font-size: 18px">
               90 % people joining the program feel light hearted and confident
               about their lifestyle choices
-            </h5>
+            </p>
           </div>
         </div>
         <div id="sizedBox" style=""></div>
@@ -228,9 +224,9 @@
     <br />
     <div class="container">
       <h3 style="color: #324a5e">
-        <span style="color: #ed156a">Professional</span>,
+        <span style="color: #6c8dd0">Professional</span>,
         <span style="color: #6c8dd0">licensed</span>, and
-        <span style="color: #298e3e">vetted</span> therapists who you can trust
+        <span style="color: #6c8dd0">vetted</span> therapists who you can trust
       </h3>
       <h5 class="" style="color: #909090">
         From some of the most prestigious institutions
