--- a/index2.html
+++ b/index2.html
@@ -223,14 +223,17 @@
     <br />
     <br />
     <div class="container">
-      <h3 style="color: #324a5e">
-        <span style="color: #6c8dd0">Professional</span>,
-        <span style="color: #6c8dd0">licensed</span>, and
-        <span style="color: #6c8dd0">vetted</span> therapists who you can trust
-      </h3>
-      <h5 class="" style="color: #909090">
-        From some of the most prestigious institutions
-      </h5>
+      <div class="px-2">
+        <h3 style="color: #324a5e">
+          <span style="color: #6c8dd0">Professional</span>,
+          <span style="color: #6c8dd0">licensed</span>, and
+          <span style="color: #6c8dd0">vetted</span> therapists who you can
+          trust
+        </h3>
+        <h5 class="" style="color: #909090">
+          From some of the most prestigious institutions
+        </h5>
+      </div>
       <br />
       <div class="row">
         <div class="col-md-6 box">
