--- a/index2.html
+++ b/index2.html
@@ -327,7 +327,7 @@
     <div class="container">
       <br id="mobnotbr" />
       <br />
-      <h3 class="m-0" style="line-height: 42px; color: #324a5e">
+      <h3 class="m-0 text-center" style="line-height: 42px; color: #324a5e">
         Get Genuine Services <img class="ms-2" src="img/apple.svg" alt="" />
       </h3>
       <br id="mobnotbr" />
@@ -370,7 +370,7 @@
                 "
                 ><b>1</b></a
               >
-              <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
+              <p class="w-75 m-0" style="font-size: 24px; font-weight: 500">
                 Daily Lifestyle Funde
               </p>
             </div>
@@ -416,7 +416,7 @@
                 "
                 ><b>2</b></a
               >
-              <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
+              <p class="w-75 m-0" style="font-size: 24px; font-weight: 500">
                 Make confident lifestyle choices
               </p>
             </div>
@@ -459,7 +459,7 @@
                 "
                 ><b>3</b></a
               >
-              <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
+              <p class="w-75 m-0" style="font-size: 24px; font-weight: 500">
                 Personal nutrition expert
               </p>
             </div>
@@ -502,7 +502,7 @@
                 "
                 ><b>4</b></a
               >
-              <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
+              <p class="w-75 m-0" style="font-size: 24px; font-weight: 500">
                 Personal mental wellness expert
               </p>
             </div>
@@ -516,7 +516,7 @@
     <div class="container">
       <br id="mobnotbr" />
       <br />
-      <h3 style="line-height: 42px; color: #324a5e">
+      <h3 class="text-center" style="line-height: 42px; color: #324a5e">
         Testimonials <img class="ms-2" src="img/trophy.svg" alt="" />
       </h3>
       <br id="mobnotbr" />
