--- a/index2.html
+++ b/index2.html
@@ -164,7 +164,7 @@
             <div class="w-100 box">
               <br />
               <br />
-              <h3>
+              <h3 style="font-weight: 700">
                 <span style="color: white">Simple Process. </span><br />
                 <span style="color: #b4fff6"> Convenient care.</span>
               </h3>
@@ -207,11 +207,13 @@
           <br />
           <br id="mobnotbr" />
           <br id="mobnotbr" />
+          <br />
+
           <div class="col-md-8 px-2 mx-auto text-center">
-            <h3 class="text-white box">
+            <h3 class="text-white box" style="font-weight: 700">
               Highly rated psychologically driven program
             </h3>
-            <p class="box" style="color: #b4fff6a1; font-size: 18px">
+            <p class="box" style="color: #b4fff6; font-size: 18px">
               90 % people joining the program feel light hearted and confident
               about their lifestyle choices
             </p>
@@ -358,8 +360,9 @@
                 <br />
               </div>
             </div>
-            <div class="px-0 text-start pt-2">
+            <div class="px-0 text-center pt-0" id="points">
               <a
+                id="pointNumber"
                 class="ms-0 px-4"
                 style="
                   color: #ffffff;
@@ -370,9 +373,16 @@
                 "
                 ><b>1</b></a
               >
-              <p class="w-75 m-0" style="font-size: 24px; font-weight: 500">
+              <p
+                class="w-100 m-0 mt-2"
+                style="font-size: 24px; font-weight: 500"
+              >
                 Daily Lifestyle Funde
               </p>
+              <hr
+                class="w-50 mx-auto"
+                style="background: #225d4d; opacity: 1"
+              />
             </div>
           </div>
         </div>
@@ -404,8 +414,9 @@
                 <br />
               </div>
             </div>
-            <div class="px-0 text-start pt-2">
+            <div class="px-0 text-center pt-0" id="points">
               <a
+                id="pointNumber"
                 class="ms-0 px-4"
                 style="
                   color: #ffffff;
@@ -416,9 +427,16 @@
                 "
                 ><b>2</b></a
               >
-              <p class="w-75 m-0" style="font-size: 24px; font-weight: 500">
+              <p
+                class="w-100 m-0 mt-2"
+                style="font-size: 24px; font-weight: 500"
+              >
                 Make confident lifestyle choices
               </p>
+              <hr
+                class="w-50 mx-auto"
+                style="background: #6c8dd0; opacity: 1"
+              />
             </div>
           </div>
         </div>
@@ -447,8 +465,9 @@
                 <br />
               </div>
             </div>
-            <div class="px-0 text-start pt-2">
+            <div class="px-0 text-center pt-0" id="points">
               <a
+                id="pointNumber"
                 class="ms-0 px-4"
                 style="
                   color: #ffffff;
@@ -459,9 +478,16 @@
                 "
                 ><b>3</b></a
               >
-              <p class="w-75 m-0" style="font-size: 24px; font-weight: 500">
+              <p
+                class="w-100 m-0 mt-2"
+                style="font-size: 24px; font-weight: 500"
+              >
                 Personal nutrition expert
               </p>
+              <hr
+                class="w-50 mx-auto"
+                style="background: #d66e4f; opacity: 1"
+              />
             </div>
           </div>
         </div>
@@ -490,8 +516,9 @@
                 <br />
               </div>
             </div>
-            <div class="px-0 text-start pt-2">
+            <div class="px-0 text-center pt-0" id="points">
               <a
+                id="pointNumber"
                 class="ms-0 px-4"
                 style="
                   color: #ffffff;
@@ -502,9 +529,16 @@
                 "
                 ><b>4</b></a
               >
-              <p class="w-75 m-0" style="font-size: 24px; font-weight: 500">
+              <p
+                class="w-100 m-0 mt-2"
+                style="font-size: 24px; font-weight: 500"
+              >
                 Personal mental wellness expert
               </p>
+              <hr
+                class="w-50 mx-auto"
+                style="background: #ed156a; opacity: 1"
+              />
             </div>
           </div>
         </div>
