--- a/index2.html
+++ b/index2.html
@@ -805,94 +805,97 @@
     <div style="height: 30px; background: #6c8dd0"></div>
     <div style="background: #edffff">
       <div class="container">
-        <br />
-        <br />
-        <img style="width: 260px" src="img/guido_logo.svg" alt="" />
-        <br />
-        <div class="row">
-          <div class="col-md-6">
-            <p style="font-size: 18px; color: #324a5e">
-              Not investing in health today cuts into your future profit : that
-              is how compounding works 😎
-            </p>
-            <br id="mobnotbr" />
-            <h4 style="line-height: 32px">
-              Our Chat-Bot is live on
-              <a href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
-                ><img
-                  class="mx-2"
-                  style="height: 32px"
-                  src="img/whatsapp.svg"
-                  alt=""
-              /></a>
-            </h4>
-            <br id="mobnotbr" />
-            <br id="mobnotbr" />
+        <div class="px-2">
+          <br />
+          <br />
+          <img style="width: 260px" src="img/guido_logo.svg" alt="" />
+          <br />
+          <div class="row">
+            <div class="col-md-6">
+              <p style="font-size: 18px; color: #324a5e">
+                Not investing in health today cuts into your future profit :
+                that is how compounding works 😎
+              </p>
+              <br id="mobnotbr" />
+              <h4 style="line-height: 32px">
+                Our Chat-Bot is live on
+                <a
+                  href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
+                  ><img
+                    class="mx-2"
+                    style="height: 32px"
+                    src="img/whatsapp.svg"
+                    alt=""
+                /></a>
+              </h4>
+              <br id="mobnotbr" />
+              <br id="mobnotbr" />
+            </div>
+            <div class="col-md-3">
+              <p>
+                <a
+                  class="btn p-0 my-0"
+                  style="font-weight: 600; color: #324a5e"
+                  href="https://logy.ai/"
+                  >About Logy.ai</a
+                >
+              </p>
+              <p>
+                <a
+                  class="btn p-0 my-0"
+                  style="font-weight: 600; color: #324a5e"
+                  href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
+                  >Support</a
+                >
+              </p>
+              <p>
+                <a
+                  class="btn p-0 my-0"
+                  style="font-weight: 600; color: #324a5e"
+                  href="mailto: humans@logy.ai"
+                  >Careers</a
+                >
+              </p>
+            </div>
+            <div class="col-md-3">
+              <p>
+                <a
+                  class="btn p-0 my-0"
+                  style="font-weight: 600; color: #324a5e"
+                  href="mailto: humans@logy.ai"
+                  >Contact Business</a
+                >
+              </p>
+              <p>
+                <a
+                  class="btn p-0 my-0"
+                  style="font-weight: 600; color: #324a5e"
+                  href="https://logy.ai/privacy.html"
+                  >Privacy policy</a
+                >
+              </p>
+              <p>
+                <a
+                  class="btn p-0 my-0"
+                  style="font-weight: 600; color: #324a5e"
+                  href="https://logy.ai/terms_and_conditions.html"
+                  >T & C</a
+                >
+              </p>
+              <p>
+                <a
+                  class="btn p-0 my-0"
+                  style="font-weight: 600; color: #324a5e"
+                  href="https://www.instagram.com/guidolife"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </p>
+            </div>
           </div>
-          <div class="col-md-3">
-            <p>
-              <a
-                class="btn p-0 my-0"
-                style="font-weight: 600; color: #324a5e"
-                href="https://logy.ai/"
-                >About Logy.ai</a
-              >
-            </p>
-            <p>
-              <a
-                class="btn p-0 my-0"
-                style="font-weight: 600; color: #324a5e"
-                href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
-                >Support</a
-              >
-            </p>
-            <p>
-              <a
-                class="btn p-0 my-0"
-                style="font-weight: 600; color: #324a5e"
-                href="mailto: humans@logy.ai"
-                >Careers</a
-              >
-            </p>
-          </div>
-          <div class="col-md-3">
-            <p>
-              <a
-                class="btn p-0 my-0"
-                style="font-weight: 600; color: #324a5e"
-                href="mailto: humans@logy.ai"
-                >Contact Business</a
-              >
-            </p>
-            <p>
-              <a
-                class="btn p-0 my-0"
-                style="font-weight: 600; color: #324a5e"
-                href="https://logy.ai/privacy.html"
-                >Privacy policy</a
-              >
-            </p>
-            <p>
-              <a
-                class="btn p-0 my-0"
-                style="font-weight: 600; color: #324a5e"
-                href="https://logy.ai/terms_and_conditions.html"
-                >T & C</a
-              >
-            </p>
-            <p>
-              <a
-                class="btn p-0 my-0"
-                style="font-weight: 600; color: #324a5e"
-                href="https://www.instagram.com/guidolife"
-                ><i class="fab fa-instagram"></i
-              ></a>
-            </p>
-          </div>
+          <br />
+          <br id="mobnotbr" />
+          <br id="mobnotbr" />
         </div>
-        <br />
-        <br id="mobnotbr" />
-        <br id="mobnotbr" />
       </div>
     </div>
   </body>
