--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style2.css" />
+    <!-- <link rel="stylesheet" href="navbtn.css" /> -->
     <link rel="stylesheet" href="alt.css" />
     <title>Guido Health | A lifestyle that works</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -46,7 +47,13 @@
       <div class="container px-0">
         <div class="row mx-0">
           <div class="col-md-6 px-0 text-center">
-            <img src="img/guido_logo.svg" id="navlogo" alt="" />
+            <div class="row">
+              <div class="col-3"></div>
+              <div class="col-6">
+                <img src="img/guido_logo.svg" id="navlogo" alt="" />
+              </div>
+              <div class="col-3"></div>
+            </div>
           </div>
           <div class="col-md-6 p-0">
             <div class="col-md-4"></div>
@@ -83,6 +90,7 @@
         </div>
       </div>
     </div>
+
     <div id="navpc" class="mx-0"></div>
     <div id="advice">
       <div class="container text-center">
@@ -152,11 +160,11 @@
         <div class="row mx-0">
           <div class="col-md-7 px-0" style="margin-top: -100px">
             <div class="row mx-0">
-              <div class="col-md-6 px-3 my-2">
-                <img class="w-100 boxLeft mb-3" src="img/step1.png" alt="" />
+              <div class="col-md-6 px-3 my-2 text-center">
+                <img class="w-75 boxLeft mb-3" src="img/step1.png" alt="" />
               </div>
-              <div class="col-md-6 px-3 my-2">
-                <img class="w-100 boxRight" src="img/step2.png" alt="" />
+              <div class="col-md-6 px-3 my-2 text-center">
+                <img class="w-75 boxRight" src="img/step2.png" alt="" />
               </div>
             </div>
           </div>
