--- a/index2.html
+++ b/index2.html
@@ -90,6 +90,19 @@
         </div>
       </div>
     </div>
+    <div id="navpc2" class="mx-0 fixed-bottom">
+      <div class="container">
+        <div class="text-center">
+          <a
+            id="joinuslanding"
+            class="py-2"
+            style="font-size: 24px"
+            href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
+            >Join us today</a
+          >
+        </div>
+      </div>
+    </div>
 
     <div id="navpc" class="mx-0"></div>
     <div id="advice">
@@ -124,18 +137,10 @@
           </p>
 
           <br />
-          <div class="text-center">
-            <a
-              id="joinuslanding"
-              style="font-size: 24px"
-              class="btn px-5 rounded-pill py-2 w-100"
-              href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
-              >Join us today</a
-            >
-          </div>
+
           <p
-            class="p-0 m-0 text-center box mt-3"
-            style="font-size: 22px; font-weight: 700; color: #6c8dd0"
+            class="p-0 m-0 text-center box"
+            style="font-size: 18px; font-weight: 700; color: #6c8dd0"
           >
             Happy Investing
           </p>
