--- a/index2.html
+++ b/index2.html
@@ -114,15 +114,17 @@
       </div>
     </div>
     <div id="landing">
-      <div id="landingImgBox" class="container">
-        <div style="height: 60px"></div>
-        <p
-          class="px-2"
-          style="font-size: 44px; font-weight: 700; color: rgb(185, 185, 185)"
-        >
-          Invest in your health with us
-        </p>
-        <div style="height: 60px"></div>
+      <div id="landingImgBox" class="">
+        <div id="insidelandingBox" class="container">
+          <div style="height: 60px"></div>
+          <p
+            class="px-2"
+            style="font-size: 44px; font-weight: 700; color: rgb(185, 185, 185)"
+          >
+            Invest in your health with us
+          </p>
+          <div style="height: 60px"></div>
+        </div>
       </div>
       <br />
 
