--- a/index2.html
+++ b/index2.html
@@ -168,10 +168,10 @@
           <div class="col-md-7 px-0" style="margin-top: -100px">
             <div class="row mx-0">
               <div class="col-md-6 px-3 my-2 text-center">
-                <img class="w-75 boxLeft mb-3" src="img/step1.png" alt="" />
+                <img class="w-75 boxLeft mb-3" src="img/step1alt.png" alt="" />
               </div>
               <div class="col-md-6 px-3 my-2 text-center">
-                <img class="w-75 boxRight" src="img/step2.png" alt="" />
+                <img class="w-75 boxRight" src="img/step2alt.png" alt="" />
               </div>
             </div>
           </div>
